--- a/sites/all/themes/chomchom/src/sass/layout/_forms.scss
+++ b/sites/all/themes/chomchom/src/sass/layout/_forms.scss
@@ -193,7 +193,7 @@ select.form-control {
 }
 
 /* Post an ad image gallery */
-custom_fieldset_wrap {
+.custom_fieldset_wrap {
   display: inline-block;
   width: 100%;
   overflow-x: auto;
